# lottery

./: .dockerignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
alembic/: env.py
alembic/versions/: ae835eb51e76_initial.py
app/: main.py
app/lottery/api/v1/: dependencies.py  dtos.py  routes.py
app/lottery/application/: close_lottery.py  create_lottery.py  get_winner.py  submit_ballot.py
app/lottery/domain/: entities.py  repository.py  service.py
app/lottery/infrastructure/: models.py  repository.py
app/shared/: config.py  database.py  repository.py  scheduler.py
app/user/api/v1/: dependencies.py  dtos.py  routes.py
app/user/application/: ban_user.py  get_user_by_id.py  unban_user.py
app/user/domain/: entities.py  repository.py
app/user/infrastructure/: models.py  repository.py
docker/app/: Dockerfile
tests/user/application/: test_get_user_usecase.py
tests/user/domain/: test_user_entity.py
