[metadata]
name = lottery
description = Lottery service
url = https://github.com/gokadi/lottery.git
author = gokadi
author_email = gokadi94@gmail.com
license = Other/Proprietary License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12

[options]
python_requires = >=3.10
packages = find:
include_package_data = True
install_requires =
    fastapi
    pydantic-settings
    apscheduler
    uvicorn[standard]
    pydantic
    sqlalchemy
    asyncpg
    psycopg2-binary

[options.packages.find]
exclude =
    tests

[options.extras_require]
dist =
    alembic
testing =
    pre-commit
    mypy
    pylama
    pytest
    pytest-asyncio
    pytest-mock
    pytest-cov
    safety
    bandit
dev =
    httpx
    sqlalchemy[mypy]
